Update refresh API in controller and swagger
